# website

./: .pre-commit-config.yaml  .prettierignore  README.md  email.config.js  index.html  package-lock.json  package.json  pyproject.toml  script.js  styles.css
.github/workflows/: ci-cd.yml
services/: ai-solutions.html  email-management.html  invoice-quote-management.html  workflow-automation.html
