[project]
name = "azurops-website"
version = "1.0.0"
description = "Official website for AZUROPS - Business Automation & AI Solutions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://www.azurops.com"
Repository = "https://github.com/azurops/website"
